--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   webview_flutter: ^1.0.0
   flutter_webview_plugin: ^0.3.10+1
   flutter_plugin_android_lifecycle: ^1.0.11
+  font_awesome_flutter: ^8.2.0
 
 dev_dependencies:
   flutter_test:
