--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/Users/nyambayar/Library/Android/sdk
-flutter.sdk=/Users/nyambayar/Development/flutter
+sdk.dir=C:\\Users\\HiTech\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\src\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.2
 flutter.versionCode=5
