--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_webview_plugin: ^0.3.10+1
   flutter_plugin_android_lifecycle: ^1.0.11
   font_awesome_flutter: ^8.2.0
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
