--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,14 +86,23 @@ flutter:
 
   # custom fonts
   fonts:
-    - family: Roboto-Condensed
+    # - family: Roboto-Condensed
+    #   fonts:
+    #     - asset: assets/fonts/Roboto_Condensed/RobotoCondensed-Light.ttf
+    #       weight: 300
+    #     - asset: assets/fonts/Roboto_Condensed/RobotoCondensed-Regular.ttf
+    #       weight: 400
+    #     - asset: assets/fonts/Roboto_Condensed/RobotoCondensed-Bold.ttf
+    #       weight: 700
+    #     - asset: assets/fonts/Roboto_Condensed/RobotoCondensed-BoldItalic.ttf
+    #       weight: 700
+    #       style: italic
+    - family: Nunito
       fonts:
-        - asset: assets/fonts/Roboto_Condensed/RobotoCondensed-Light.ttf
-          weight: 300
-        - asset: assets/fonts/Roboto_Condensed/RobotoCondensed-Regular.ttf
-          weight: 400
-        - asset: assets/fonts/Roboto_Condensed/RobotoCondensed-Bold.ttf
+        - asset: assets/fonts/Nunito/Nunito-Light.ttf
+          weight: 500
+        - asset: assets/fonts/Nunito/Nunito-Regular.ttf
+        - asset: assets/fonts/Nunito/Nunito-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Nunito/Nunito-Bold.ttf
           weight: 700
-        - asset: assets/fonts/Roboto_Condensed/RobotoCondensed-BoldItalic.ttf
-          weight: 700
-          style: italic
