--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
     - assets/images/law.png
     - assets/images/job.png
     - assets/images/ux_big.png
+    - assets/images/bg-blue.jpg
     - assets/images/svg/arrow-left.svg
     - assets/images/svg/page-heading-part-time.svg
     - assets/images/svg/icon-part-time.svg
