--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,8 @@ flutter:
     - assets/images/ux_big.png
     - assets/images/bg-blue.jpg
     - assets/images/bg-wh.jpg
+    - assets/images/bg-purple.jpg
+    - assets/images/bg-green.jpg
     - assets/images/svg/arrow-left.svg
     - assets/images/svg/page-heading-part-time.svg
     - assets/images/svg/icon-part-time.svg
