verify input zasav

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   font_awesome_flutter: ^8.2.0
   qr_flutter: ^4.0.0
   custom_fade_animation: ^0.0.2
+  verify_code_input: ^1.0.1
 
 dev_dependencies:
   flutter_test:
