--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - assets/images/law.png
     - assets/images/job.png
     - assets/images/ux_big.png
+    - assets/images/page-heading-legal.jpg
     - assets/images/bg-blue.jpg
     - assets/images/bg-wh.jpg
     - assets/images/bg-purple.jpg
