--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,8 @@ flutter:
     - assets/images/job.png
     - assets/images/ux_big.png
     - assets/images/page-heading-legal.jpg
+    - assets/images/page-heading-law.jpg
+    - assets/images/page-heading-knowledge.jpg
     - assets/images/bg-blue.jpg
     - assets/images/bg-wh.jpg
     - assets/images/bg-purple.jpg
