--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ flutter:
     - assets/images/page-heading-legal.jpg
     - assets/images/page-heading-law.jpg
     - assets/images/page-heading-knowledge.jpg
+    - assets/images/page-heading-event.jpg
     - assets/images/bg-blue.jpg
     - assets/images/bg-wh.jpg
     - assets/images/bg-purple.jpg
