--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   qr_flutter: ^4.0.0
   custom_fade_animation: ^0.0.2
   verify_code_input: ^1.0.1
+  majascan: ^0.4.0
 
 dev_dependencies:
   flutter_test:
